# AI4SupplyChain

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
backend/src/api/: main.py
demand_forecasting/: demand_forcasting.py
docs/: Product_Requirements.md  Software_Architecture.md
frontend/src/services/: api.ts
inventory_assistant/: config.py
inventory_assistant/database/: db.py
inventory_assistant/models/: laptop.py
inventory_assistant/simulation/: engine.py  generator.py
nbs/: initial-sim.ipynb
scripts/: deploy.py  generate_sample_data.py  run_tests.py  setup_dev.py
src/: __init__.py  config.py
src/agent/: __init__.py  agent.py  llm_client.py  memory.py  tools.py
src/api/: __init__.py  chat.py  forecast.py  inventory.py  main.py  suppliers.py  transactions.py
src/data/: __init__.py  base.py  database.py  forecast.py  inventory.py  suppliers.py
src/services/: __init__.py  forecasting.py  inventory.py  optimization.py  simulation.py  suppliers.py  transactions.py
src/ui/: __init__.py  main.py
src/ui/components/: charts.py  forms.py  tables.py
src/ui/pages/: __init__.py  chat.py  forecasting.py  inventory.py  optimization.py  products.py  suppliers.py  transactions.py
storage/: .gitkeep  README.md
storage/database/: .gitkeep
storage/sample_data/: README.md  locations.csv  products.csv  suppliers.csv  transactions.csv
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_basic.py  test_models.py  test_services.py  test_ui.py
