[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai4supplychain"
version = "1.0.0"
description = "AI-Powered Dynamic Inventory and Demand Planning System"
authors = [
    {name = "Henry Jiang", email = "henryjiang18@gmail.com"},
    {name = "Mohamed Arshath"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi[all]>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "plotly>=5.17.0",
    "langchain>=0.0.340",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "google-cloud-vision>=3.4.0",
    "boto3>=1.29.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]